traycer/k8s/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: kube-prometheus-stack
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
    - hosts:
      - "metrics.7cav.us"
      secretName: letsencrypt-grafana
  ingressClassName: nginx
  rules:
  - host: metrics.7cav.us
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              name: http-web
